[package]
name = "merge-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features=["rustls"] }
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
tokio = "1.32.0"

# ref: https://loige.co/building_x86_rust-containers-from-mac-silicon/
